tests/snapshots/status_up_to_date.snap
---
source: tests/snapshots.rs
expression: output.transcript()
---
exit: 0
--- stdout ---
<empty>
--- stderr ---

Template:  [tmp]/template
Ref:       refs/tpl/template

Revision:  main ([short])
Rendered:  1 rendering
Merged:    yes
Worktree:  clean
